Closed Bug 393324 Opened 17 years ago Closed 17 years ago

cairo leak in nsNativeThemeGTK::DrawWidgetBackground

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

References

()

Details

(Keywords: memory-leak)

Attachments

(2 files)

Attached file valgrind leak report
Reproduce by loading http://www.metacafe.com and then quitting the browser.
assigned to vlad by request
Keywords: mlk
Attached patch free the boxesSplinter Review
Assignee: vladimir → nobody
Component: GFX: Xlib → GFX: Thebes
QA Contact: xlib → thebes
Component: GFX: Thebes → GFX: Xlib
Component: GFX: Xlib → GFX: Thebes
Attachment #280479 - Flags: superreview+
Attachment #280479 - Flags: review+
Attachment #280479 - Flags: approval1.9?
Assignee: nobody → sayrer
Version: unspecified → Trunk
Checking in gfx/cairo/cairo/src/cairo-clip.c;
/cvsroot/mozilla/gfx/cairo/cairo/src/cairo-clip.c,v  <--  cairo-clip.c
new revision: 1.24; previous revision: 1.23
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Attachment #280479 - Flags: approval1.9? → approval1.9+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: