Bug 393324. cairo leak in nsNativeThemeGTK::DrawWidgetBackground. r/sr=stuart, a=mconnor